Added basics for home page

--- a/templates/base.html
+++ b/templates/base.html
@@ -31,6 +31,8 @@
             </div>
         </div>
     </nav>
+    {% block content %}
+    {% endblock content %}
     <footer class="footer mt-auto py-3 dark-bg">
         <p class="m-0 text-center text-black">
             {% block copyright %}Made by Matthew Hughes for Educational purposes{% endblock copyright %}
