--- a/trophy_hunter/templates/trophy_hunter/index.html
+++ b/trophy_hunter/templates/trophy_hunter/index.html
@@ -1,1 +1,9 @@
 {% extends "base.html" %}
+
+{% block content %}
+<div class="container-sm text-bg-warning p-3">
+    <div class="row">
+        <h1 class="heading-title">Last Trophy</h1>
+    </div>
+</div>
+{% endblock %}
