Added static files and basic css for homepage

--- a/trophy_hunter/templates/trophy_hunter/index.html
+++ b/trophy_hunter/templates/trophy_hunter/index.html
@@ -1,9 +1,10 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="container-sm text-bg-warning p-3">
+<div class="container-fluid text-bg-warning p-3 heading-title">
     <div class="row">
-        <h1 class="heading-title">Last Trophy</h1>
+        <h1 class="heading">Last Trophy</h1>
+        <p class="heading-paragraph">Join us in getting that one Last Trophy!</p>
     </div>
 </div>
 {% endblock %}
