--- a/trophy_hunter/templates/trophy_hunter/index.html
+++ b/trophy_hunter/templates/trophy_hunter/index.html
@@ -1,10 +1,22 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="container-fluid text-bg-warning p-3 heading-title">
+<div class="container-fluid text-bg-warning p-3 heading-text">
     <div class="row">
         <h1 class="heading">Last Trophy</h1>
         <p class="heading-paragraph">Join us in getting that one Last Trophy!</p>
     </div>
+    <div class="container text-center">
+        <div class="row">
+            <div class="col-12">
+                <button type="button" class="btn btn-success">Become a Trophy Hunter</button>
+            </div>
+            <div class="col-12">
+                <button type="button" class="btn btn-success">Login Here</button>
+            </div>
+        </div>
+    
+    </div>
 </div>
+
 {% endblock %}
