--- a/trophy_hunter/templates/trophy_hunter/index.html
+++ b/trophy_hunter/templates/trophy_hunter/index.html
@@ -3,8 +3,9 @@
 {% block content %}
 <div class="container-fluid text-bg-warning p-3 heading-text">
     <div class="row">
-        <h1 class="heading">Last Trophy</h1>
-        <p class="heading-paragraph">Join us in getting that one Last Trophy!</p>
+        <p class="heading-paragraph">Are you an aspiring trophy hunter and are fed up of keeping track of your progress
+            yourself then look no further and become a trophy hunter today and join our ever growing community. It's very
+            simple just click the button below to become a trophy hunter and join us in unlocking that one last trophy!</p>
     </div>
     <div class="container text-center">
         <div class="row">
@@ -15,7 +16,7 @@
                 <button type="button" class="btn btn-success">Login Here</button>
             </div>
         </div>
-    
+
     </div>
 </div>
 
