--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,5 +11,15 @@
 
 .btn {
     margin-bottom: 10px;
-    
+}
+
+.social-icons {
+    list-style: none;
+    display: flex;
+}
+
+.social-icons>li {
+    font-size: 1.5em;
+    padding-left: 0;
+    padding-right: 20px;
 }
