--- a/trophy_hunter/templates/trophy_hunter/test.html
+++ b/trophy_hunter/templates/trophy_hunter/test.html
@@ -2,7 +2,8 @@
 
 {% block content %}
 {% for category in categories %}
-<p>{category.genre}</p>
+{{ category.genre }}
+{{ category.game}}
 
 {% endfor %}
 {% endblock %}
