deleted test html and adjusted category html

--- a/category/templates/category.html
+++ b/category/templates/category.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 {% for category in categories %}
-<p>{category.genre}</p>
+<p>{{category.genre}}</p>
 
 {% endfor %}
 {% endblock %}
