Adjusted category.html to show game and genre

--- a/category/templates/category.html
+++ b/category/templates/category.html
@@ -3,6 +3,7 @@
 {% block content %}
 {% for category in categories %}
 <p>{{category.genre}}</p>
+<p>{{ category.game}}</p>
 
 {% endfor %}
 {% endblock %}
