Added slug migration to category model

--- a/category/templates/category.html
+++ b/category/templates/category.html
@@ -3,7 +3,8 @@
 {% block content %}
 {% for category in categories %}
 <p>{{category.genre}}</p>
-<p>{{category.game}}</p>
-
+{{category.game}}
 {% endfor %}
+
+
 {% endblock %}
