--- a/category/templates/category.html
+++ b/category/templates/category.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 
 {% block content %}
-{% for category in object_list %}
-<p>{{category.genre}}</p>
-<a href="{% url 'category_detail' category.slug %}">{{category.game}}</a>
+{% for categories in object_list %}
+<p>{{categories.genre}}</p>
+<a href="{% url 'category_detail' category.slug %}">{{categories.game}}</a>
 {% endfor %}
 
 
