--- a/trophy_hunter/templates/trophy_hunter/index.html
+++ b/trophy_hunter/templates/trophy_hunter/index.html
@@ -20,4 +20,7 @@
     </div>
 </div>
 
+{% for game in object_list %}
+<a href="{% url 'game_detail' game.slug %}">{{game.title}}</a>
+{% endfor %}
 {% endblock %}
