Seperated views, created game and genre view,url

--- a/category/templates/category.html
+++ b/category/templates/category.html
@@ -1,9 +1,8 @@
 {% extends 'base.html' %}
 
 {% block content %}
-{% for categories in object_list %}
-<p>{{categories.genre}}</p>
-<a href="{% url 'category_detail' category.slug %}">{{categories.game}}</a>
+{% for genre in object_list %}
+<a href="{% url 'game' %}">{{genre.title}}</a>
 {% endfor %}
 
 
