imported django.filter, added trophy description

--- a/category/templates/game_detail.html
+++ b/category/templates/game_detail.html
@@ -1,22 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'base.html' %}
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Games</title>
-</head>
-
-<body>
-    <h1>Games List</h1>
-    <h2>{{game.title}}</h2>
-    <p>{{ game.author }}</p>
+{% block content %}
+    {{game.title}}
     <p> {{ game.trophy_count }}</p>
 
     {% for trophy in trophies %}
     {{ trophy.title }}
+    <p>{{trophy.description}}</p>
     {% endfor %}
-</body>
-
-</html>
+{% endblock %}
