--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
                             <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'category' %}">Categories</a>
+                            <a class="nav-link" href="{% url 'game' %}">Games</a>
                         </li>
                 </div>
             </div>
