--- a/category/templates/category.html
+++ b/category/templates/category.html
@@ -9,6 +9,7 @@
 
 <hr>
 
+
 <h1>Game List</h1>
 <table class="table">
     <thead>
@@ -20,15 +21,17 @@
         </tr>
     </thead>
     <tbody>
-        {% for games in game %}
+        {% for game in games %}
         <tr>
             <td>
-                <a href="">{{ games.title }}</a>
+                <a href="{% url 'game-detail' game.slug %}">{{ game.title }}</a>
                 
             </td>
-            <td>{{ games.get_genre_display }}</td>
-            <td>{{ games.trophy_count }}</td>
-            <td>{{ games.hours }}</td>
+            <td>
+                <a href="">{{ game.get_genre_display }}</a>
+                </td>
+            <td>{{ game.trophy_count }}</td>
+            <td>{{ game.hours }}</td>
         {% endfor %}
     </tbody>
 
