--- a/category/templates/game_detail.html
+++ b/category/templates/game_detail.html
@@ -3,10 +3,10 @@
 {% block content %}
 <div class="image-container">
     {% if "placeholder" in game.featured_image.url %}
-    <img class="card-img-top" src="{% static 'static/images/elden-ring-cover.jpg' %}"
+    <img class="img-fluid" src="{% static 'static/images/elden-ring-cover.jpg' %}"
       alt="placeholder image">
     {% else %}
-    <img class="card-img-top" src=" {{ game.featured_image.url }}"
+    <img class="img-fluid" alt="Responsive image" src=" {{ game.featured_image.url }}"
       alt="{{ game.title }}">
     {% endif %}
     {% for trophy in trophies %}
