--- a/static/css/style.css
+++ b/static/css/style.css
@@ -25,6 +25,27 @@
     padding-right: 20px;
 }
 
-.trophy-img {
-    display: flex;
+img{
+    float:left;
+    margin-left: 2px;
+}
+
+.game-heading {
+    padding-left: 4px;
+}
+
+.trophy-heading {
+    padding-left: 4px;
+
+}
+
+
+.trophy-name {
+    padding-left: 5px;
+}
+
+
+
+.trophy-description{
+    padding-left: 4rem;
 }
