--- a/category/templates/game_detail.html
+++ b/category/templates/game_detail.html
@@ -18,26 +18,26 @@
 </div>
 
 <div class="row">
-  <div>
     <div class="trophy-section">
       <h3 class="trophy-heading">Trophies</h3>
+      <hr>
       {% for trophy in trophies %}
       <div class="trophy-name">
-        <p>{{trophy.title}}</p>
+        <p class="trophy-title">{{trophy.title}}</p>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-4 col-lg-3 trophy-images">
         {% if "placeholder" in trophy.featured_image.url %}
         <img class="image-size" width="20%" src="{% static 'static/images/elden-ring-cover.jpg' %}"
           alt="placeholder image">
         {% else %}
         <img class="img-thumbnail" width="20%" alt="Responsive image" src=" {{ trophy.featured_image.url }}"
           alt="{{ trophy.title }}">
+          <p class="trophy-description">{{trophy.description}}</p>
       </div>
-      <p class="trophy-description">{{trophy.description}}</p>
+      <div><a href="">1 guide written</a></div>
     </div>
-  </div>
 </div>
-</div>
+
 {% endif %}
 {% endfor %}
 
