--- a/category/templates/game_detail.html
+++ b/category/templates/game_detail.html
@@ -23,7 +23,7 @@
       <hr>
       {% for trophy in trophies %}
       <div class="trophy-name">
-        <p class="trophy-title">{{trophy.title}}</p>
+        <p class="trophy-title"><strong>{{trophy.title}}</strong></p>
       </div>
       <div class="col-md-4 col-lg-3 trophy-images">
         {% if "placeholder" in trophy.featured_image.url %}
