--- a/category/templates/category.html
+++ b/category/templates/category.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container-fluid">
     <div class="row">
-        <form method="GET" action="{% url 'game' %}" class="genre-form">
+        <form method="GET" action="{% url 'game' %}" class="d-flex flex-column flex-lg-row">
             {{form.as_p}}
             <input type="submit" value="Submit" class="btn btn-success">
         </form>
