--- a/templates/base.html
+++ b/templates/base.html
@@ -50,7 +50,7 @@
             {% block copyright %}Made by Matthew Hughes for Educational purposes{% endblock copyright %}
         </p>
         <p class="m-0 text-center text-black">Follow us on our socials:</p>
-        <ul class="social-icons">
+        <ul class="social-icons d-flex justify-content-center">
             <li>
                 <a href="https://www.youtube.com/" target="_blank" rel="noopener"
                     aria-label="Find us on Youtube by clicking the Youtube icon (link opens in new tab)"><i
