--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
         integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet"  type="text/css" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
     <title>Last Trophy</title>
 </head>
 
@@ -40,11 +40,11 @@
     </header>
 
     <main>
+        {% block content %}
+        {% endblock content %}
 
     </main>
 
-    {% block content %}
-    {% endblock content %}
     <footer class="footer mt-auto py-3 dark-bg">
         <p class="m-0 text-center text-black">
             {% block copyright %}Made by Matthew Hughes for Educational purposes{% endblock copyright %}
@@ -58,22 +58,25 @@
                 </a>
             </li>
             <li>
-                <a href="https://en-gb.facebook.com/" target="_blank" rel="noopener" aria-label="Find us on Facebook by clicking the Facebook icon (link opens in new tab)">
+                <a href="https://en-gb.facebook.com/" target="_blank" rel="noopener"
+                    aria-label="Find us on Facebook by clicking the Facebook icon (link opens in new tab)">
                     <i class="fab fa-facebook-square ms-3"></i>
                 </a>
             </li>
             <li>
-                <a href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="Find us on Instagram by clicking the Instagram icon (link opens in new tab)">
+                <a href="https://www.instagram.com/" target="_blank" rel="noopener"
+                    aria-label="Find us on Instagram by clicking the Instagram icon (link opens in new tab)">
                     <i class="fab fa-instagram-square ms-3"></i>
                 </a>
             </li>
             <li>
-                <a href="https://twitter.com/?lang=en" target="_blank" rel="noopener" aria-label="Find us on Twitter by clicking the Twitter icon (link opens in new tab)">
+                <a href="https://twitter.com/?lang=en" target="_blank" rel="noopener"
+                    aria-label="Find us on Twitter by clicking the Twitter icon (link opens in new tab)">
                     <i class="fab fa-twitter-square ms-3"></i>
                 </a>
             </li>
         </ul>
-        
+
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
