--- a/guides/templates/guide_detail.html
+++ b/guides/templates/guide_detail.html
@@ -1,4 +1,8 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
+{% for guide in game_guide %}
+{{guide.title}}
+
+{% endfor %}
 {% endblock %}
