--- a/category/templates/game_detail.html
+++ b/category/templates/game_detail.html
@@ -25,7 +25,9 @@
     <hr>
     {% for trophy in trophies %}
     <div class="trophy-name">
-      <p class="trophy-title"><strong>{{trophy.title}}</strong></p>
+      <p class="trophy-title">
+        <a href="{% url 'trophy-detail' trophy.slug %}"><strong>{{trophy.title}}</strong></a>
+      </p>
     </div>
     <div class="col-md-4 col-lg-3 trophy-images">
       {% if "placeholder" in trophy.featured_image.url %}
@@ -35,15 +37,13 @@
       <img class="img-thumbnail" width="20%" alt="Responsive image" src=" {{ trophy.featured_image.url }}"
         alt="{{ trophy.title }}">
       <p class="trophy-description">{{trophy.description}}</p>
-      {% for guide in game_guide %}
-    <a href="{% url 'trophy-detail' trophy.slug %}">{{guide.body}}</a>
-    {% endfor %}
+
     </div>
   </div>
   {% endif %}
   {% endfor %}
   <div>
-    
+
   </div>
 </div>
 
