Adjusted game detail styling for all devices

--- a/guides/templates/guide_detail.html
+++ b/guides/templates/guide_detail.html
@@ -3,6 +3,8 @@
 {% block content %}
 {% for guide in game_guide %}
 {{guide.title}}
+{{guide.body}}
+{{guide.author}}
 
 {% endfor %}
 {% endblock %}
