--- a/category/templates/game_detail.html
+++ b/category/templates/game_detail.html
@@ -7,17 +7,17 @@
       <h1>{{game.title}}</h1>
     </div>
   </div>
-  <div class="d-flex justify-content-center">
+  <div class="border col-md-4 col-lg-4">
     {% if "placeholder" in game.featured_image.url %}
-    <img class="img-fluid w-100" src="{% static 'static/images/elden-ring-cover.jpg' %}" alt="Responsive image">
+    <img class="img-thumbnail"  src="{% static 'static/images/elden-ring-cover.jpg' %}" alt="placeholder">
     {% else %}
-    <img class="img-fluid" alt="Responsive image" src=" {{ game.featured_image.url }}" alt="{{ game.title }}">
+    <img class="img-thumbnail" src=" {{ game.featured_image.url }}" alt="{{ game.title }}">
     {% endif %}
+    <p><i class="fab fa-solid fa-trophy"></i>{{game.trophy_count}}</p>
+    <p><i class="fab fa-solid fa-clock"></i>{{game.hours}}</p>
 
   </div>
 </div>
-
-
 
 <div class="row">
   <div class="trophy-section">
