--- a/category/templates/game_detail.html
+++ b/category/templates/game_detail.html
@@ -1,10 +1,11 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 {% load static %}
+
 {% block content %}
 <div class="row">
   <div class="col-md-4">
     <div class="game-heading">
-      <h1>{{game.title}}</h1>
+      <h3>{{game.title}}</h3>
     </div>
   </div>
   <div class="border col-md-4 col-lg-4">
@@ -13,8 +14,8 @@
     {% else %}
     <img class="img-thumbnail" src=" {{ game.featured_image.url }}" alt="{{ game.title }}">
     {% endif %}
-    <p><i class="fab fa-solid fa-trophy"></i>{{game.trophy_count}}</p>
-    <p><i class="fab fa-solid fa-clock"></i>{{game.hours}}</p>
+    <p><i class="fa fa-solid fa-trophy"></i>{{game.trophy_count}}</p>
+    <p><i class="fa fa-solid fa-clock"></i>{{game.hours}}</p>
 
   </div>
 </div>
@@ -25,9 +26,7 @@
     <hr>
     {% for trophy in trophies %}
     <div class="trophy-name">
-      <p class="trophy-title">
-        <a href="{% url 'trophy-detail' trophy.slug %}"><strong>{{trophy.title}}</strong></a>
-      </p>
+        <a href="{% url 'trophy-detail' trophy.slug %}" class="trophy-title"><strong>{{trophy.title}}</strong></a>
     </div>
     <div class="col-md-4 col-lg-3 trophy-images">
       {% if "placeholder" in trophy.featured_image.url %}
