--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,9 @@
 /* Generic styles */
 
+h1,h2,h3 {
+    font-size: 20px;
+}
+
 .heading-text {
     height: 73vh;
     text-align: center;
@@ -43,11 +47,11 @@ img{
 
 }
 
-
 .trophy-name {
     padding-left: 5px;
     padding-top: 10px;
 }
+
 
 .trophy-images {
     display: flex;
@@ -55,6 +59,3 @@ img{
 }
 
 
-.trophy-description{
-    padding-left: 1rem;
-}
