--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -11,15 +11,61 @@
 
 .btn {
     margin-bottom: 10px;
+    width: fit-content;
 }
 
 .social-icons {
     list-style: none;
     display: flex;
+    justify-content: center;
+    padding-right: 35px;
 }
 
 .social-icons>li {
     font-size: 1.5em;
     padding-left: 0;
     padding-right: 20px;
+}
+
+
+img{
+    float:left;
+    margin-left: 2px;
+}
+
+
+.game-heading {
+    padding-left: 4px;
+    font-size: 200px;
+}
+
+.trophy-heading {
+    padding-left: 4px;
+
+}
+
+.trophy-name {
+    padding-left: 5px;
+    padding-top: 10px;
+    font-size: 40px;
+}
+
+.trophy-title {
+    font-size: 40px;
+}
+
+.trophy-images {
+    display: flex;
+    align-self: flex-start;
+}
+
+
+.trophy-description{
+    padding-left: 1rem;
+    font-size: 40px;
+    background-color: blue;
+}
+
+.work {
+    background-color: blue;
 }
