--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -1,5 +1,9 @@
 /* Generic styles */
 
+h1,h2,h3 {
+    font-size: 20px;
+}
+
 .heading-text {
     height: 73vh;
     text-align: center;
@@ -14,19 +18,18 @@
     width: fit-content;
 }
 
-.social-icons {
-    list-style: none;
-    display: flex;
-    justify-content: center;
-    padding-right: 35px;
+.genre-form {
+    padding-top: 8px;
 }
 
-.social-icons>li {
-    font-size: 1.5em;
-    padding-left: 0;
-    padding-right: 20px;
+.genre-form label {
+    padding-left: 8px;
+    padding-top: 3px;
 }
 
+.form-btn {
+    margin-left: 8px;
+}
 
 img{
     float:left;
@@ -36,7 +39,19 @@ img{
 
 .game-heading {
     padding-left: 4px;
-    font-size: 200px;
+}
+
+.game-info {
+    text-align: center;
+}
+
+.game-info i {
+    padding: 5px;
+}
+
+.game-summary {
+    text-align: center;
+    padding: 20px;
 }
 
 .trophy-heading {
@@ -47,25 +62,29 @@ img{
 .trophy-name {
     padding-left: 5px;
     padding-top: 10px;
-    font-size: 40px;
 }
 
-.trophy-title {
-    font-size: 40px;
-}
 
 .trophy-images {
     display: flex;
     align-self: flex-start;
 }
 
-
-.trophy-description{
-    padding-left: 1rem;
-    font-size: 40px;
-    background-color: blue;
+.social-icons {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    padding-right: 35px;
 }
 
-.work {
-    background-color: blue;
+
+.social-icons>li {
+    font-size: 1.5em;
+    padding-left: 0;
+    padding-right: 20px;
 }
+
+
+
+
+
