--- a/static/css/style.css
+++ b/static/css/style.css
@@ -60,9 +60,19 @@ img{
 }
 
 .trophy-name {
-    padding-left: 5px;
+    margin-left: 5px;
     padding-top: 10px;
 }
+
+.trophy-description {
+    margin-left: 8px;
+
+}
+
+.trophy-rarity {
+    margin-right: 2px;
+}
+
 
 
 .trophy-images {
